--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>All Projects</title>
     <!-- ADD ONs-->
     <script src="include.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css" />
