--- a/nav.html
+++ b/nav.html
@@ -26,6 +26,8 @@
         <li><a href="../../soloproject.html">Solo Projects</a></li>
         </ul>
     </li>
+    
+    <li><a href="../../seniorsharing.html">Senior Sharing</a></li>
 
     <li><a href="../../about.html">About Me</a></li>
 
